[metadata]
name = cardano-sync-tests
url = https://github.com/IntersectMBO/cardano-sync-tests
maintainer = IOE Cardano Node QA Team
maintainer_email = sara.tomaz@iohk.io
description = Sync tests for cardano-node and db-sync
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    blockfrost-python
    colorama
    GitPython
    pandas
    psutil
    pyyaml
    pymysql
    requests
    setuptools >= 60.5.0
