[metadata]
name = cardano-sync-tests
url = https://github.com/IntersectMBO/cardano-sync-tests
maintainer = IOE Cardano Node QA Team
maintainer_email = sara.tomaz@iohk.io
description = Sync tests for cardano-node and db-sync
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    GitPython
    assertpy
    blockfrost-python
    colorama
    matplotlib
    pandas
    psutil
    psycopg2-binary
    pymysql
    requests
    setuptools >= 60.5.0
    xmltodict
